--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           // previousMaturity:  "WD",
 
           // if there a publicly available Editor's Draft, this is the link
-          edDraftURI:           "http://people.opera.com/mage/WebArrayMathAPI",
+          edDraftURI:           "http://opera-mage.github.io/webarraymath/",
 
           // if this is a LCWD, uncomment and set the end of its review period
           // lcEnd: "2009-08-05",
