Added the fill() method

--- a/index.html
+++ b/index.html
@@ -497,6 +497,11 @@ dstImag[k] = (xImag[k] * yReal[k] - xReal[k] * yImag[k]) / denom
           For each <code>k</code> in the range <code>0</code> &le; <code>k</code> &lt; <code>min(dst.length, x.length)</code>,
           the method MUST compute <code>dst[k] = modulo(x[k], 1)</code>.
         </dd>
+        <dt>void fill (Float32Array dst, double value)</dt>
+        <dd>
+          For each <code>k</code> in the range <code>1</code> &le; <code>k</code> &lt; <code>dst.length</code>,
+          the method MUST perform the assignment <code>dst[k] = value</code>.
+        </dd>
         <dt>void ramp (Float32Array dst, double first, double last)</dt>
         <dd>
           <p>
