--- a/demos/mandel.html
+++ b/demos/mandel.html
@@ -4,6 +4,19 @@
 <script type="text/javascript">
 "use strict";
 
+// requestAnimationFrame polyfill.
+if (!window.requestAnimationFrame) {
+  if (window.mozRequestAnimationFrame)
+    window.requestAnimationFrame = mozRequestAnimationFrame;
+  else if (window.webkitRequestAnimationFrame)
+    window.requestAnimationFrame = webkitRequestAnimationFrame;
+  else
+    window.requestAnimationFrame = function (f) {
+      setTimeout(f, 1);
+    };
+}
+
+
 function Demo() {
   // Constants.
   var NUM_WORKERS = 12;
@@ -72,33 +85,32 @@ function Demo() {
         // Last worker?
         m_num_active_workers--;
         if (m_num_active_workers == 0) {
-          // Update FPS counter.
-          var dt = ((new Date()).getTime() - m_frame_start_time) * 0.001;
-          m_total_frames_time += dt;
-          m_num_frames++;
-          if (m_total_frames_time >= 1.0 && m_num_frames >= 2) {
-            m_fps = m_num_frames / m_total_frames_time;
-            m_total_frames_time = 0;
-            m_num_frames = 0;
-          }
+            // Update FPS counter.
+            var t = (new Date()).getTime();
+            if (m_frame_start_time > 0) {
+              var dt = (t - m_frame_start_time) * 0.001;
+              m_total_frames_time += dt;
+              m_num_frames++;
+              if (m_total_frames_time >= 1.0 && m_num_frames >= 2) {
+                m_fps = m_num_frames / m_total_frames_time;
+                m_total_frames_time = 0;
+                m_num_frames = 0;
+              }
+            }
+            m_frame_start_time = t;
 
-          // Write the image data.
-          m_ctx.putImageData(m_img, 0, 0);
+            // Write the image data.
+            m_ctx.putImageData(m_img, 0, 0);
 
-          if (m_fps > 0) {
-            var fpsDisp = Math.round(m_fps * 10) / 10;
-            m_ctx.fillText("" + fpsDisp + " fps", 10, 10);
-          }
+            if (m_fps > 0) {
+              var fpsDisp = Math.round(m_fps * 10) / 10;
+              m_ctx.fillText("" + fpsDisp + " fps", 10, 10);
+            }
 
-          // Request another animation frame.
-          if (window.requestAnimationFrame)
-            requestAnimationFrame(redraw);
-          else if (window.mozRequestAnimationFrame)
-            mozRequestAnimationFrame(redraw);
-          else if (window.webkitRequestAnimationFrame)
-            webkitRequestAnimationFrame(redraw);
-          else
-            setTimeout(redraw, 1);
+          requestAnimationFrame(function () {
+            // Shedule another redraw...
+            redraw();
+          });
         }
       };
 
@@ -115,7 +127,6 @@ function Demo() {
 
     // Start all workers.
     var m_num_active_workers = NUM_WORKERS;
-    m_frame_start_time = (new Date()).getTime();
     var firstRow = 0, numRows = Math.ceil(m_height / NUM_WORKERS);
     for (var k = 0; k < NUM_WORKERS; ++k) {
       if (firstRow + numRows > m_height) {
