Started work on an FFT based sound synthesis demo

--- a/demos/index.html
+++ b/demos/index.html
@@ -11,6 +11,7 @@ body {
 <h2>Web Array Math API - Demos</h2>
 <ul>
   <li><a href="mandel.html">Mandelbrot fractal</a></li>
+  <li><a href="fft-synth.html">FFT based sound synthesis</a></li>
 </ul>
 </body>
 </html>
